--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "dev": "nodemon server.js"
   },
   "type": "module",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
